# rdws_webserver

./: .clang-format  .deployignore  .editorconfig  .env.development  .env.development.example  .env.development.test  .env.example  .env.production.example  .gitignore  .gitmodules  API-GATEWAY.md  CMakeLists.txt  DATABASE.md  DATABASE_SETUP_SUMMARY.md  DEPLOY-FEDORA.md  DEPLOY-QUICK.md  DEPRECATED_FILES.md  DEVELOPMENT.md  Dockerfile  Dockerfile.gateway  ENV_CONFIG_CHANGES.md  LAMBDA_EVENT_CONTEXT_API.md  README.md  SECRETS_SETUP.md  api-gateway-example.js  api-gateway.js  api-gateway.ts  config.template  cpp-rest-server-simple.service  cpp-rest-server.service  curl_examples.md  docker-compose.yml  jest.config.js  jest.config.json  package-lock.json  package.json  tsconfig.json
.github/: GITHUB_ACTIONS.md  README.md  README_GITHUB_ACTIONS.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd-production.yml  ci.yml  deploy.yml  release-old.yml  release.yml
__tests__/: api-gateway.test.js
database/: config.js  connection.js
database/migrations/: 001_create_users_table.sql  002_create_orders_table.sql  003_create_products_table.sql
database/seeds/: development_data.sql  production_data.sql
examples/: schema_usage_example.cpp
functions/: README.md  stack.yaml
functions/hello-simple/: handler.js
functions/orders-api/: handler.js  package.json
functions/users-api/: Dockerfile  handler.js  package.json
include/: hello_server.h
lab/: run_tests.sh  schema_validation_example.cpp  test_config.cpp  test_database_config.cpp  test_dotenv.cpp
scripts/: check-environment.sh  complete-postgresql-setup.sh  create_package.sh  deploy-fedora.sh  deploy.sh  disable-selinux-temp.sh  enable-postgresql-external.sh  fix-postgresql-permissions.sh  fix-selinux.sh  generate-cpp-config.sh  load_env.sh  local_setup.sh  migrate-database.sh  quick-postgresql-setup.sh  remote_build.sh  remote_run.sh  remote_test.sh  service_manager.sh  setup-database-manual.sh  setup-environment-ci.sh  setup-environment.sh  setup-postgresql-persistent.sh  setup-postgresql.sh  setup_github_runner.sh  setup_linux_mint.sh  simple-postgresql-setup.sh  test-postgresql.sh  test-remote-postgresql.sh  test-workflows.sh  verify-deploy.sh
services/: README.md
services/orders/: CMakeLists.txt  main.cpp
services/users/: CMakeLists.txt  main.cpp
src/: README.md  hello_server.cpp  main.cpp
src/api-gateway/: api-gateway.ts
src/api-gateway/debug/: api-gateway.debug.ts
src/api-gateway/tests/: api-gateway.spec.ts
src/api-gateway/tests/local/: app.local.ts
src/routes/: BaseRouter.ts  index.ts  orders.routes.ts  products.routes.ts  users.routes.ts
src/schemas/shared/: common-fields.json  pagination.json
src/schemas/user/: create.json  query.json  update.json
src/services/: CMakeLists.txt  README.md
src/services/common/: database_config.h
src/services/orders/: CMakeLists.txt  main.cpp  order_repository.cpp  order_repository.h  order_service.cpp  order_service.h  order_service_old.cpp
src/services/users/: CMakeLists.example.txt  CMakeLists.txt  example_with_database.cpp  main.cpp  user_service.cpp  user_service.h
src/shared/common/: config.h  database_config.h
src/shared/common/config/: config.cpp  config.h
src/shared/common/database/: idatabase.h  postgresql_database.cpp  postgresql_database.h
src/shared/common/utils/: lambda_params_helper.cpp  lambda_params_helper.h  response_helper.cpp  response_helper.h
src/shared/controllers/: base_controller.h  order_controller.h  user_controller.h
src/shared/repository/: order_repository.cpp  order_repository.h  user_repository.cpp  user_repository.h
src/shared/types/: lambda_context.cpp  lambda_context.h  lambda_event.cpp  lambda_event.h  order.cpp  order.h  service_result.h  user.cpp  user.h
src/shared/users/: example_with_database.cpp  simple_users_service.cpp
src/shared/validation/: schema_validator.cpp  schema_validator.h  schemas.h
src/types/: index.ts  lambda.ts
test/: api-gateway.spec.ts
tests/: CMakeLists.txt  test_hello_server.cpp  test_integration.cpp  test_main.cpp
tests/api-gateway/: api-gateway.spec.ts
tests/common/: test_helpers.cpp  test_helpers.h
tests/mocks/: mock_database.cpp  mock_database.h  mock_order_result_set.h  mock_user_result_set.h
tests/orders/: test_order_service_unit.cpp  test_orders_service.cpp
tests/users/: test_user_service_unit.cpp  test_users_service.cpp
